fix: reverted changes for icon in contrast mode

--- a/packages/components/src/components/button/button.scss
+++ b/packages/components/src/components/button/button.scss
@@ -8,7 +8,6 @@
 @use "../../styles/button-components";
 
 .db-button {
-	--db-current-icon-color: #{colors.$db-current-color-enabled};
 	@extend %default-interactive-component;
 	@extend %default-button;
 
